@@ -3,6 +3,9 @@
 	Backported from mainline
 	2019-11-27  Jakub Jelinek  <jakub@redhat.com>
 
+	PR fortran/91944
+	* gfortran.dg/spread_size_limit_2.f90: New test.
+
 	PR c++/92524
 	* g++.dg/cpp0x/pr92524.C: New test.
 
